Add style to footer social media icons

--- a/index.html
+++ b/index.html
@@ -120,11 +120,30 @@
             <h3>The Marker Hotel</h3>
             <h3>11.30</h3>
         </div>
-       
+
         </div>
     </section>
     <footer>
-        Social links here
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our twitter page (opens in a new tab)"><i
+                    class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our instagram page (opens in a new tab)"><i
+                    class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- font awesome script -->
